k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-svc
spec:
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
status:
  loadBalancer:
